--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,5 +1,4 @@
 .lead__image {
-    max-width: 984px;
     width: 100%;
     margin-top: 64px;
 }
