--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,6 +1,6 @@
 .lead__subtitle {
   max-width: 640px;
-  margin: 32px auto 0;
+  margin: 24px auto 0;
   font-size: 30px;
   line-height: 1.2;
   text-align: center;
