--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,6 +1,6 @@
 .lead__title {
   max-width: 720px;
-  margin: 56px auto 0;
+  margin: 0 auto;
   font-size: 96px;
   line-height: 1.04;
   font-weight: 900;
